auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-mysql
  labels:
    app: auth-service-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-mysql
  template:
    metadata:
      labels:
        app: auth-service-mysql
    spec:
      imagePullSecrets:
      - name: myregistrykey  
      volumes:
        - name: mysql-volume
          hostPath:
            path: /home/ubuntu/storage/mysql/authentication-db/
            type: Directory
      containers:
      - name: web
        image: obdif/auth:prod
        imagePullPolicy: Always
        securityContext: 
          runAsUser: 1000 
          runAsGroup: 1000
        command: ['/bin/bash']
        args: ['-c', 'python manage.py migrate && gunicorn -w 4 admin.wsgi -b 0.0.0.0:8080']
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
      - name: mysql
        image: obdif/auth-db:1.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: mysql-volume
            mountPath: /var/lib/mysql/
        ports:
        - containerPort: 3306
          protocol: TCP
